# artificial-intelligence

./: AI-DataScience.pptx  AI-ML-Evalution-Functions.pptx  AI-Machine-Learining.pptx  AI-NLP.pptx  AI-Neural-Networks.pptx  AI-SVM_DTree.pptx  AI_PYTORCH.pptx  CNN_MODEL_LINKS.txt  CNN_RNN_MODEL_LINKS.txt  Data-Visualisation-Assignment.docx  Data-Visualisation-Task-Solution.docx  Data-Visualisation-Task.docx  EmailAPI_Assistant.txt  GenerativeAI_LLM.pptx  Gradio-Tutorial-Links.txt  Introduction to RAG_Langchain.pptx  Mart_API.txt  NAVTEC-PROJECT-ASSIGNMENT.xlsx  Numpy-Python.pptx  Pandas-Python.pptx  Pandas_Tutorial_Link.txt  PostgreSQL Installation Steps.txt  Practical_Assignment_CNN.docx  PyTorch_Links.txt  Python-Programming-Week01.pptx  Python-Programming-Week02.pptx  Python-Programs.rar  Python-updated-slides.pptx  SeaBorn-Plot.txt  Seaborn_Matplotib.pptx  Tutorial-Links.txt  python.pptx
Code-Quiz/: Python_Practice-Work-01.docx  Solution_Practice-Works-01.py  ~$thon_Practice-Work-01.docx
Docker/07_hello_world_containerize_python/: readme.md
Poetry_Projects/poetry-demo/: pyproject.toml
Python-Programs/: Aggregation.py  Association.docx  Association.py  Modifier_Protected.py
python-codes/Error_and_File_Handling/: README.md  filehandling-demo.ipynb  filehandling.py
python-codes/Langchain/: .env  Custom_Question_Answering_Chatbot_using_LLM.ipynb  Gemini-API-Connect.py  LLM_Links.txt  Langchain_02_splitters_and_embeddings.ipynb  gcr.txt  langchain_01_document_loading.ipynb  llm-gemini-test.ipynb  llm.py
python-codes/ML_CODE/: Assignment_Q1.ipynb  Assignment_Q2.ipynb  Assignment_Q3.ipynb  Evaluation_Metrics.ipynb  Evaluation_Metrics1.ipynb  Importance of Hyperparameter Tuning in Training an ANN.docx  ML_LinearRegression_.ipynb  ML_NLP.ipynb  ML_NLTK.py  ML_Noise-Removal-NLTK.py  ML_Noise-Removal-Spacy.py  ML_Spacy.py  NLP_Data-Preprocessing.ipynb  NLP_Data-Preprocessing.py  NLP_Datamodel.py  ml-nlp.py  (+26 more)
python-codes/api-development/frontend-mart-api/: pyproject.toml
python-codes/api-development/frontend-mart-api/app/: app_streamlit_martapi.py
python-codes/api-development/mart-api/: README.md  pyproject.toml
python-codes/api-development/mart-api/app/: auth.py  crud.py  database.py  main.py  models.py  models_new.py
python-codes/api-development/poetry-api/: pyproject.toml
python-codes/api-development/poetry-api/test_app/: api-calls.py  app-fastapi-dbsave.py  app-fastapi-digits-dbsave.py  app_fastapi_hero.py  app_fastapi_todo.py  app_fastapi_todo_userauth.py  test-api.py
python-codes/fastapi/poetry_fastapi/: pyproject.toml
python-codes/todo-api/: pyproject.toml
(+82 files in other folders)
