[tool.poetry]
name = "todoapi"
version = "0.1.0"
description = ""
authors = ["Azam Rashid <azamrashid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
