[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Azam Rashid <azamrashid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
